apps/base/dashboard/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
spec:
  tls:
  - hosts:
      - dashboard
    secretName: tls
  rules:
  - host: dashboard
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
